--- a/src/modules/users/views/forgot_password.hbs
+++ b/src/modules/users/views/forgot_password.hbs
@@ -14,7 +14,7 @@
     <p>
         <a href="{{link}}">Resetar minha senha</a>
     </p>
-    <p>Se não foi você então descarte esse e-mail.</p>
+    <p>Se não foi você então descarte esse e-mail. Qualquer problema entre em contato com fabriciodorneles@gmail.com</p>
     <p>
         Obrigado!<br />
         <strong>Equipe GoBarber</strong>
