--- a/src/modules/users/views/forgot_password.hbs
+++ b/src/modules/users/views/forgot_password.hbs
@@ -14,9 +14,11 @@
     <p>
         <a href="{{link}}">Resetar minha senha</a>
     </p>
-    <p>Se não foi você então descarte esse e-mail. Qualquer problema entre em contato com fabriciodorneles@gmail.com</p>
+    <p>Se não foi você então descarte esse e-mail.</p>
+    <p>Qualquer problema ou solicitação entre em contato com fabriciodorneles@gmail.com</p>
     <p>
         Obrigado!<br />
         <strong>Equipe GoBarber</strong>
+        <strong>fabriciodorneles@gmail.com</strong>
         </p>
 </div>
